src/iac/security_groups.tf
resource "aws_security_group" "this" {
  name        = var.aws_security_group_name
  description = "Allow All Traffic"
  vpc_id      = aws_vpc.this.id
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
